<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.unaj.gabbo.picmoments.RegisterActivity"
    >

    <View
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backLogin"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/account"
        android:textColor="@color/whiteColor"
        android:textSize="40sp"
        android:id="@+id/txt_success_name"
        android:gravity="center_horizontal"
        android:layout_marginTop="63dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/succesLogin"
        android:id="@+id/textView6"
        android:textColor="@color/whiteColor"
        android:gravity="center_horizontal"
        android:layout_below="@+id/txt_success_name"
        android:layout_alignRight="@+id/txtname_reg"
        android:layout_alignEnd="@+id/txtname_reg"
        android:layout_alignLeft="@+id/txtname_reg"
        android:layout_alignStart="@+id/txtname_reg" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtname_reg"
        android:hint="@string/fullName"
        android:maxLines="1"
        android:textColor="@color/whiteColor"
        android:drawablePadding="10dp"
        android:textColorHint="@color/placeHolder"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="180dp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:maxLines="1"
        android:textColor="@color/whiteColor"
        android:textColorHint="@color/placeHolder"
        android:id="@+id/txteUser_reg"
        android:hint="@string/user"
        android:drawablePadding="10dp"
        android:layout_below="@+id/txtname_reg"
        android:layout_alignLeft="@+id/txtname_reg"
        android:layout_alignStart="@+id/txtname_reg"
        android:layout_alignRight="@+id/txtname_reg"
        android:layout_alignEnd="@+id/txtname_reg" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtpass_reg"
        android:hint="@string/password"
        android:maxLines="1"
        android:textColor="@color/whiteColor"
        android:textColorHint="@color/placeHolder"
        android:drawablePadding="10dp"
        android:layout_below="@+id/txteUser_reg"
        android:layout_alignLeft="@+id/txteUser_reg"
        android:layout_alignStart="@+id/txteUser_reg"
        android:layout_alignRight="@+id/txteUser_reg"
        android:layout_alignEnd="@+id/txteUser_reg" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtmobile_reg"
        android:hint="@string/number"
        android:maxLines="1"
        android:inputType="number"
        android:textColor="@color/whiteColor"
        android:textColorHint="@color/placeHolder"
        android:drawablePadding="10dp"
        android:layout_below="@+id/txtpass_reg"
        android:layout_alignLeft="@+id/txtpass_reg"
        android:layout_alignStart="@+id/txtpass_reg"
        android:layout_alignRight="@+id/txtpass_reg"
        android:layout_alignEnd="@+id/txtpass_reg" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/btn_reg"
        android:layout_below="@+id/txtmobile_reg"
        android:layout_alignLeft="@+id/txtmobile_reg"
        android:layout_alignStart="@+id/txtmobile_reg"
        android:layout_marginTop="30dp"
        android:layout_alignRight="@+id/txtmobile_reg"
        android:layout_alignEnd="@+id/txtmobile_reg" />


</RelativeLayout>